improve pop out property

--- a/vite-project/src/components/styles/Header.css
+++ b/vite-project/src/components/styles/Header.css
@@ -54,12 +54,12 @@
 @media (max-width: 768px) {
   .container-header {
     flex-direction: column;
-    height: 100vh;
+    height: 100%;
   }
 
   .left-header, .right-header {
     flex: unset;
-    height: 50vh;
+    height: 25vh;
     width: 100%;
   }
 
